--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.56.0",
+    "dotenv": "^17.2.1",
     "fs": "^0.0.1-security",
+    "pg": "^8.16.3",
     "playwright": "^1.55.0"
   }
 }
